fix: section-title font-size, process-step gap

--- a/css/style.css
+++ b/css/style.css
@@ -5564,6 +5564,7 @@ body.admin-bar .header-menu-area.sticky_menu {
     margin-top: 12px;
     padding: 24px;
     padding-bottom: 0;
+    gap: 12px;
   }
 }
 .process-step:hover .icon-wrapper .icon h3 {
@@ -7716,7 +7717,7 @@ button.testimonial-arrow-btn:hover:before {
 }
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .section-title .title {
-    font-size: 36px;
+    font-size: 34px;
     line-height: 48px;
   }
 }
@@ -10472,7 +10473,7 @@ ul.children {
 }
 @media (max-width: 991px) {
   .why-choose-area.style-1 .about-info-card {
-    margin-top: 40px;
+    margin: 40px 14px 0 14px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -14097,6 +14098,9 @@ ul.children {
   .achieve-area.style-2 .content.style-3 {
     padding-left: 0;
     border: none;
+    padding-bottom: 0;
+    padding-top: 50px;
+    border-top: 1px solid #D6D6D6;
   }
 }
 .achieve-area.style-2 .divider {
@@ -14120,6 +14124,7 @@ ul.children {
 @media only screen and (min-width: 0px) and (max-width: 767px) {
   .achieve-area.style-2 .achieve-item-wrapper {
     padding-right: 0;
+    margin-bottom: 50px;
   }
 }
 @media only screen and (min-width: 768px) and (max-width: 991px) {
