--- a/sass/modules/_title-section.scss
+++ b/sass/modules/_title-section.scss
@@ -54,7 +54,7 @@
       }
     }
     @include sm {
-      font-size: 36px;
+      font-size: 34px;
       line-height: 48px;
     }
     @media only screen and (min-width: 0px) and (max-width: 439px){
