--- a/sass/modules/process-step/_process-step.scss
+++ b/sass/modules/process-step/_process-step.scss
@@ -17,6 +17,7 @@
             margin-top: 12px;
             padding: 24px;
             padding-bottom: 0;
+            gap: 12px;
         }
         &:hover{
             .icon-wrapper{
