--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -199,7 +199,7 @@
       //   padding-right: 20px;
       // }
       @include rmaxwd(991){
-        margin-top: 40px;
+        margin: 40px 14px 0 14px;
       }
       .list-item-wrapper{
         ul{
